Replace RailroadProject with plugin Project DTO
Refactor codebase to use the plugin SPI Project (dev.railroadide.railroad.plugin.spi.dto.Project) instead of RailroadProject across Gradle, IDE, runconfig, and UI modules. Update Gradle tooling services, managers, tree builders and context menus to accept Project, and adjust thread naming to use project paths. Rename UI element GradleProjectElement to GradleModuleElement and update its usages. Add a new DebuggingManager for per-project debug state and introduce RunConfiguration.isRunning(Project) (plus minor formatting/whitespace fixes and JSON serialization adjustments).